--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -112,9 +112,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
               <p id="register">Gender</p>
               <select name="gender" style="margin-left: 2em;margin-bottom: 1em;width: 30%;padding: 3px 0">
                   <option selected="selected" disabled="disabled"  style='display: none' value=''></option>
-                  <option value ="male">Male</option>
-                  <option value ="Female">Female</option>
-                  <option value="Secret">Secret</option>
+                  <option value ="M">Male</option>
+                  <option value ="F">Female</option>
+                  <option value="S">Secret</option>
                 </select>
               <p id="register">Age</p>
               <select name="age" style="margin-left: 2em;margin-bottom: 1em;width: 30%;padding: 3px 0">
