--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1840,6 +1840,8 @@ page
 	width: 20%;
 	height: auto;
 	float: left;
+	border-radius: 50%;
+	overflow: hidden;
 }
 
 .profile-header-image img {
@@ -1971,4 +1973,67 @@ page
 
 .right-recent-rating h2 {
 	padding-top: 10px;
+}
+
+.settings-left input {
+	width: 80%;
+}
+
+.settings-left select {
+	width: 80%;
+	margin-left: 38px;
+	margin-bottom: 1em;
+	padding: 3px 0
+}
+
+.settings-container {
+	margin-top: 20px;
+}
+
+.settings-container h3, h4{
+	display: inline;
+}
+
+.settings-container input{
+	margin-top: 20px;
+	margin-left: 38px;
+}
+
+.settings-container select{
+	font-size: 14px;
+	margin-top: 20px;
+}
+
+.profile-image {
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	overflow: hidden;
+	margin-left: 64px;
+}
+
+.profile-image img{
+	width: 100%;
+}
+
+.profile-image input {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+.choose-profile-picture img{
+	width: 100px;
+	height: 100px;
+	margin: 20px;
+}
+
+input[type="radio"] {
+    margin: 20px;
+}
+
+.change-password input {
+	width: 80%;
+	margin: 20px;
 }
