--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Favorite</title>
+<title>Search</title>
 <link rel="icon" href="../../static/images/logo-icon.png" type="image/x-icon"/>
 <link href="../../static/css/bootstrap.css" rel='stylesheet' type='text/css' />
 <!-- Custom Theme files -->
@@ -9,6 +9,7 @@
 <!-- Custom Theme files -->
 <script src="../../static/js/jquery.min.js"></script>
 <script src="../../static/js/jquery.classyloader.min.js"></script>
+<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <!-- Custom Theme files -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -18,6 +19,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--webfont-->
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 </head>
+<script>
+    function back() {
+        window.history.back(-1);
+    }
+</script>
 <body>
 	<!-- header-section-starts -->
 	<div class="full">
@@ -75,7 +81,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
                 {% endif %}
 				<div class="search">
-										<form action="{% url 'search' %}" method="post">
+					<form action="{% url 'search' %}" method="post">
                         {% csrf_token %}
 						<input type="text" value="Search.." onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Search..';}" name="search"/>
 						<input type="submit" value="">
@@ -84,64 +90,51 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="clearfix"></div>
 			</div>
 		</div>
-			<!---profile-->
-        <div class="main-profile">
-            <div class="profile-header">
-                <h3 class="head" style="padding-left: 25%">{{username}}</h3>
-                <div class="profile-header-info">
-                    <div class="profile-header-image">
-                        <img src="../../static/images/user/default/man-1.png">
-                    </div>
-                    <div class="profile-header-average-score">
-                        <h4 style="font-weight: bold">Average Movie Score</h4>
-                        <canvas class="loader" style="margin-top: -20px; margin-left: -10px"></canvas>
-                    </div>
-                    <div class="profile-header-stats">
-                        <h4 style="font-weight: bold">Total Ratings</h4>
-                        <h2 style="font-weight: bold; line-height: 150px; color: dodgerblue">{{rating_count}}</h2>
-                    </div>
-                    <img src="../../static/images/icons/settings.png" width="48px" style="position: absolute; top: 120px; right: 20px">
-                </div>
-                <script>
-                $(document).ready(function() {
-                    $('.loader').ClassyLoader({
-                        speed: 20,
-                        diameter: 50,
-                        fontSize: '26px',
-                        fontFamily: 'Open Sans',
-                    {% if avg_score <= 2 %}
-                        lineColor: 'rgba(201,57,97,1)',
-                    {% elif avg_score > 2 and avg_score <= 3.5%}
-                        lineColor: 'rgba(212,212,83,1)',
-                    {% else %}
-                        lineColor: 'rgba(96,197,126,1)',
-                    {% endif %}
-                        fontColor: 'rgba(0,0,0,0.8)',
-                        percentage: ({{avg_score}} / 5) * 100,
-                        remainingLineColor: 'rgba(0,0,0,0.1)',
-                        lineWidth: 16,
-                    });
-                });
-            </script>
+			<!---settings-->
+        <div class="content" style="width: 100%; display: inline-block; min-height: 500px;">
+            <div>
+                <img src="../../static/images/icons/search.png" style="width: 48px; display: inline; margin-left: 20px; margin-bottom: 20px"><h1 style="display: inline">Search</h1>
             </div>
-            <div class="profile-favorite">
-                <h2>My Favorite</h2>
-                <div class="favorite-content" >
-                {% if fav_movie_list %}
-                    {% for fav_movie in fav_movie_list %}
-                    <div class="favorite-list-single-all">
-                    <a href="/moviehub/movie/{{ fav_movie.movie_id }}">
-                            <img src = "{{'https://www.themoviedb.org/t/p/w1280/'}}{{fav_movie.poster_url}}" alt={{ fav_movie.movie_title }} width="200px">
-                    </a>
+            <h3 style="margin: 20px">Search by name</h3>
+            {% if search_by_name_flag %}
+                {% for movie in movies_search_by_name %}
+                <div class="search-single">
+                    <div class="search-single-left">
+                        <a href="/moviehub/movie/{{ movie.movie_id }}"><img src="{{'https://www.themoviedb.org/t/p/w1280/'}}{{movie.poster_url}}"></a>
                     </div>
-                    {% endfor %}
-                {% else %}
-                {% endif %}
+                    <div class="search-single-right">
+                        <h3>{{movie.movie_title}}</h3>
+                        <h5>{{movie.release_date}}</h5>
+                        <p>{{ movie.summary }}</p>
+                    </div>
+                </div>
+                {% endfor %}
+            {% else %}
+                <img src="../../static/images/png/no-result.png" style="width: 30%;margin-left: 40px">
+            {% endif %}
+
+            <h3 style="margin: 20px">Search by movie ID</h3>
+            {% if search_by_id_flag %}
+                {% for movie in movies_search_by_id %}
+                <div class="search-single">
+                    <div class="search-single-left">
+                        <a href="/moviehub/movie/{{ movie.movie_id }}"><img src="{{'https://www.themoviedb.org/t/p/w1280/'}}{{movie.poster_url}}"></a>
+                    </div>
+                    <div class="search-single-right">
+                        <h3>{{movie.movie_title}}</h3>
+                        <h5>{{movie.release_date}}</h5>
+                        <p>{{ movie.summary }}</p>
+                    </div>
+                </div>
+                {% endfor %}
+            {% else %}
+                <img src="../../static/images/png/no-result.png" style="width: 30%;margin-left: 40px">
+            {% endif %}
 
 
-                </div>
-            </div>
         </div>
+
+
 <div class="footer">
 		<h6>Disclaimer : </h6>
 		<p class="claim">This is a free and unofficial website, I have no intention to disclose any movie, brand or news. My goal here is to improve my skills and finish my graduation project.</p>
