--- a/app/templates/topmovies.html
+++ b/app/templates/topmovies.html
@@ -75,8 +75,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
                 {% endif %}
 				<div class="search">
-					<form>
-						<input type="text" value="Search.." onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Search..';}"/>
+										<form action="{% url 'search' %}" method="post">
+                        {% csrf_token %}
+						<input type="text" value="Search.." onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Search..';}" name="search"/>
 						<input type="submit" value="">
 					</form>
 				</div>
@@ -239,7 +240,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <div class="overlay"></div>
                               <img src = "{{'https://www.themoviedb.org/t/p/w1280/'}}{{each.poster_url}}" alt="">
                               <div class="image-details">
-                                  <a href="/moviehub/movie/{{ each.movie_id }}" style="color: white"><p style="font-weight: bold">{{ each.movie_title }}</p></a>
+                                  cc<p style="font-weight: bold">{{ each.movie_title }}</p></a>
                               </div>
                             <div class="rating-overlay"><canvas class="loader{{ each.movie_id }}" style="margin-left: -35%; margin-top: 75%;"></canvas></div>
                         </div>
