--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -76,8 +76,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
                 {% endif %}
 				<div class="search">
-					<form>
-						<input type="text" value="Search.." onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Search..';}"/>
+										<form action="{% url 'search' %}" method="post">
+                        {% csrf_token %}
+						<input type="text" value="Search.." onFocus="this.value = '';" onBlur="if (this.value == '') {this.value = 'Search..';}" name="search"/>
 						<input type="submit" value="">
 					</form>
 				</div>
@@ -170,24 +171,31 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 </div>
             {% endif %}
 
-            <div class="profile-favorite">
-                <h2>Browsing History</h2>
-                <div class="profile-favorite-content" >
-                    {% if history_movie_list %}
-                        {% for history_movie in history_movie_list %}
-                        <div class="favorite-list-single">
-                                <img src = "{{'https://www.themoviedb.org/t/p/w1280/'}}{{history_movie.poster_url}}" alt={{ history_movie.movie_title }} width="200px">
-                            <a href="/moviehub/movie/{{ history_movie.movie_id }}"><p>{{ history_movie.movie_title }}</p></a>
-                            </div>
-                        {% endfor %}
-                    {% else %}
-                        <img src="../../static/images/png/no-history.png" style="margin-left: 30px">
-                    {% endif %}
+            <form action="{% url 'delete-browsing-history' %}" method="post">
+                {% csrf_token %}
+                <div class="profile-favorite">
+                    <h2 style="display: inline">Browsing History</h2>
+                    <button style="display:inline; float: right; margin-left: 1.5em;margin-bottom: 1em;width: 150px;padding:8px;background-color: red;border-color: #dfb636;color: #fff;
+        -moz-border-radius: 10px;-webkit-border-radius: 10px;border-radius: 10px; /* future proofing */-khtml-border-radius: 10px; /* for old Konqueror browsers */text-align: center;
+        vertical-align: middle;border: 1px solid transparent;font-weight: 700;font-size:125%">Clear</button>
+                    <div class="profile-favorite-content" >
+                        {% if history_movie_list %}
+                            {% for history_movie in history_movie_list %}
+                            <div class="favorite-list-single">
+                                    <img src = "{{'https://www.themoviedb.org/t/p/w1280/'}}{{history_movie.poster_url}}" alt={{ history_movie.movie_title }} width="200px">
+                                <a href="/moviehub/movie/{{ history_movie.movie_id }}"><p>{{ history_movie.movie_title }}</p></a>
+                                </div>
+                            {% endfor %}
+                        {% else %}
+                            <img src="../../static/images/png/no-history.png" style="margin-left: 30px">
+                        {% endif %}
+                    </div>
                 </div>
+            </form>
+
                 <div class="profile-recommend">
                     <h2>Recommendations For You</h2>
                 </div>
-            </div>
         </div>
 
 <div class="footer">
