--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2037,3 +2037,50 @@ input[type="radio"] {
 	width: 80%;
 	margin: 20px;
 }
+
+.search-single {
+	width: 60%;
+	height: 200px;
+	margin-left: 40px;
+	margin-bottom: 20px;
+	-webkit-box-shadow: 0 0 30px rgba(0,0,0,0.1);
+    box-shadow: 0 0 30px rgba(0,0,0,0.15);
+    -webkit-transform: translate3d(0, 0px, -2px);
+    transform: translate3d(0, 1px, -2px);
+	border-radius: 10px;
+}
+
+.search-single-left {
+	width: 19%;
+	height: inherit;
+	float: left;
+	padding-right: 20px;
+}
+
+.search-single-left img{
+	width: 100%;
+	border-radius: 10px;
+}
+
+.search-single-right {
+	width: 81%;
+	height: inherit;
+	float: right;
+	padding:0 20px;
+}
+
+.search-single-right h5{
+	padding-left: 0;
+	padding-top: 5px;
+	color: grey;
+}
+
+.search-single-right p {
+	padding-left: 0;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 4;
+	-webkit-box-orient: vertical;
+}
+
